# smart-data-sanitizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/data_sanitizer/: __init__.py  cli.py  exceptions.py  models.py  replacer.py  sanitizer.py  streamlit_app.py
src/data_sanitizer/detectors/: __init__.py  base.py  credit_card_detector.py  email_detector.py  name_detector.py  phone_detector.py
tests/: README.md  __init__.py
tests/fixtures/: edge_cases.json  invalid_json.txt  invalid_sample.json  sample_dirty_data.json
tests/integration/: test_end_to_end.py
tests/property/: test_cli_properties.py  test_detection_properties.py  test_replacer_properties.py  test_sanitizer_properties.py
tests/unit/: test_cli.py  test_exceptions.py  test_models.py  test_replacer.py  test_sanitizer.py  test_streamlit_app.py
tests/unit/test_detectors/: __init__.py  test_base.py  test_credit_card_detector.py  test_email_detector.py  test_name_detector.py  test_phone_detector.py
